objects/BlueSTAR_MEAB139_ControlBlock__mdt.object
<CustomObject>
    <fields>
        <fullName>applReturnCode__c</fullName>
        <label>applReturnCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dataLength__c</fullName>
        <label>dataLength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>originatorId__c</fullName>
        <label>originatorId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reserved__c</fullName>
        <label>reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceAlias__c</fullName>
        <label>serviceAlias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceStatus__c</fullName>
        <label>serviceStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startOfData__c</fullName>
        <label>startOfData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tag__c</fullName>
        <label>tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionControl__c</fullName>
        <label>transactionControl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BlueSTAR MEAB139 WSDL ControlBlock</label>
    <pluralLabel>BlueSTAR MEAB139 WSDL ControlBlocks</pluralLabel>
</CustomObject>